{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 316,
  "lineage": "01e5fb69-4d3a-d034-2d63-1216af6f9a9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-vpc-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017a26f9d2e0df673",
            "arn": "arn:aws:ec2:ap-south-1:503561443062:elastic-ip/eipalloc-017a26f9d2e0df673",
            "association_id": "eipassoc-07ba12b3ea6207be4",
            "domain": "vpc",
            "id": "eipalloc-017a26f9d2e0df673",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b2a369a3437b8801",
            "private_dns": "ip-10-10-2-104.ap-south-1.compute.internal",
            "private_ip": "10.10.2.104",
            "public_dns": "ec2-3-109-246-217.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.246.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-elastic-ip"
            },
            "tags_all": {
              "Name": "dev-vpc-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bb6a80f01f03502",
            "arn": "arn:aws:ec2:ap-south-1:503561443062:instance/i-050f85a4da25e371b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050f85a4da25e371b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "test-delete",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7749cc75c2fd3b9",
            "private_dns": "ip-10-10-2-252.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.252",
            "public_dns": "ec2-3-6-92-0.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.92.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f35f1f7a56b15fa7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018a70061b75d00d1",
            "tags": {
              "Name": "dev-app-server1"
            },
            "tags_all": {
              "Name": "dev-app-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0727e75fe347c517d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-for-ec2",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:internet-gateway/igw-0053ff597e6a510cf",
            "id": "igw-0053ff597e6a510cf",
            "owner_id": "503561443062",
            "tags": {
              "Name": "dev-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-internet-gateway"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-vpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017a26f9d2e0df673",
            "association_id": "eipassoc-07ba12b3ea6207be4",
            "connectivity_type": "public",
            "id": "nat-03ff57864a062a951",
            "network_interface_id": "eni-0b2a369a3437b8801",
            "private_ip": "10.10.2.104",
            "public_ip": "3.109.246.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018a70061b75d00d1",
            "tags": {
              "Name": "dev-vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev-vpc-eip",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pri-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:network-acl/acl-06bacd0a6119023ff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06bacd0a6119023ff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "503561443062",
            "subnet_ids": [
              "subnet-030e47fecd12b3399",
              "subnet-0cafb2f469c2a3262",
              "subnet-0ccd32615a1b8705d"
            ],
            "tags": {
              "Name": "dev-vpc-private-nacl"
            },
            "tags_all": {
              "Name": "dev-vpc-private-nacl"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pub-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:network-acl/acl-0b23894736e66b783",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b23894736e66b783",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "503561443062",
            "subnet_ids": [
              "subnet-018a70061b75d00d1",
              "subnet-08cd364d7ee3960b8",
              "subnet-0c4e584613002c1fc"
            ],
            "tags": {
              "Name": "dev-vpc-public-nacl"
            },
            "tags_all": {
              "Name": "dev-vpc-public-nacl"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri-sub-1a-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fe47bf692b9c2d03",
            "network_acl_id": "acl-06bacd0a6119023ff",
            "subnet_id": "subnet-030e47fecd12b3399"
          },
          "dependencies": [
            "aws_network_acl.pri-nacl",
            "aws_subnet.pri-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri-sub-1b-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ffdf3564283226cf",
            "network_acl_id": "acl-06bacd0a6119023ff",
            "subnet_id": "subnet-0cafb2f469c2a3262"
          },
          "dependencies": [
            "aws_network_acl.pri-nacl",
            "aws_subnet.pri-subnet-1b",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri-sub-1c-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0bccd93d82d0aeb46",
            "network_acl_id": "acl-06bacd0a6119023ff",
            "subnet_id": "subnet-0ccd32615a1b8705d"
          },
          "dependencies": [
            "aws_network_acl.pri-nacl",
            "aws_subnet.pri-subnet-1c",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub-sub-1a-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-076235db869e2b26a",
            "network_acl_id": "acl-0b23894736e66b783",
            "subnet_id": "subnet-018a70061b75d00d1"
          },
          "dependencies": [
            "aws_network_acl.pub-nacl",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub-sub-1b-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e6f8180910f87639",
            "network_acl_id": "acl-0b23894736e66b783",
            "subnet_id": "subnet-0c4e584613002c1fc"
          },
          "dependencies": [
            "aws_network_acl.pub-nacl",
            "aws_subnet.pub-subnet-1b",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub-sub-1c-to-nacl-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e5720354157ea0eb",
            "network_acl_id": "acl-0b23894736e66b783",
            "subnet_id": "subnet-08cd364d7ee3960b8"
          },
          "dependencies": [
            "aws_network_acl.pub-nacl",
            "aws_subnet.pub-subnet-1c",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:route-table/rtb-00e142803aa3a18c0",
            "id": "rtb-00e142803aa3a18c0",
            "owner_id": "503561443062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03ff57864a062a951",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-vpc-eip",
            "aws_nat_gateway.dev-vpc-nat",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:route-table/rtb-043fc2d34946286a6",
            "id": "rtb-043fc2d34946286a6",
            "owner_id": "503561443062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0053ff597e6a510cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-subnet-1a-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038934bf291e1c4c6",
            "route_table_id": "rtb-00e142803aa3a18c0",
            "subnet_id": "subnet-030e47fecd12b3399"
          },
          "dependencies": [
            "aws_eip.dev-vpc-eip",
            "aws_nat_gateway.dev-vpc-nat",
            "aws_route_table.pri-route-table",
            "aws_subnet.pri-subnet-1a",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-subnet-1b-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014917f98d9d75d83",
            "route_table_id": "rtb-00e142803aa3a18c0",
            "subnet_id": "subnet-0cafb2f469c2a3262"
          },
          "dependencies": [
            "aws_eip.dev-vpc-eip",
            "aws_nat_gateway.dev-vpc-nat",
            "aws_route_table.pri-route-table",
            "aws_subnet.pri-subnet-1b",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-subnet-1c-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a54ea39b95fadc",
            "route_table_id": "rtb-00e142803aa3a18c0",
            "subnet_id": "subnet-0ccd32615a1b8705d"
          },
          "dependencies": [
            "aws_eip.dev-vpc-eip",
            "aws_nat_gateway.dev-vpc-nat",
            "aws_route_table.pri-route-table",
            "aws_subnet.pri-subnet-1c",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-1a-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f748aed90ad3d73",
            "route_table_id": "rtb-043fc2d34946286a6",
            "subnet_id": "subnet-018a70061b75d00d1"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.pub-route-table",
            "aws_subnet.pub-subnet-1a",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-1b-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e23c4fe930a46ae",
            "route_table_id": "rtb-043fc2d34946286a6",
            "subnet_id": "subnet-0c4e584613002c1fc"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.pub-route-table",
            "aws_subnet.pub-subnet-1b",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-1c-to-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529fc7ac22d61d34",
            "route_table_id": "rtb-043fc2d34946286a6",
            "subnet_id": "subnet-08cd364d7ee3960b8"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.pub-route-table",
            "aws_subnet.pub-subnet-1c",
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:security-group/sg-089d4f7d4de75e642",
            "description": "This SG for public ALB access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089d4f7d4de75e642",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-public-security-group",
            "name_prefix": "",
            "owner_id": "503561443062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-public-sg"
            },
            "tags_all": {
              "Name": "alb-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-for-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:security-group/sg-0727e75fe347c517d",
            "description": "This SG for public EC2 servers access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0727e75fe347c517d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250222152827043000000001",
            "name_prefix": "terraform-",
            "owner_id": "503561443062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-public-sg"
            },
            "tags_all": {
              "Name": "ec2-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-030e47fecd12b3399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030e47fecd12b3399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-private-subnet-1a"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-0cafb2f469c2a3262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cafb2f469c2a3262",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-vpc-private-subnet-1b"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-0ccd32615a1b8705d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd32615a1b8705d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-vpc-private-subnet-1c"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-018a70061b75d00d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018a70061b75d00d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-public-subnet-1a"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-0c4e584613002c1fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4e584613002c1fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-vpc-public-subnet-1b"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:subnet/subnet-08cd364d7ee3960b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cd364d7ee3960b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561443062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-vpc-public-subnet-1c"
            },
            "vpc_id": "vpc-0f23752c1e22cbccc"
          },
          "dependencies": [
            "aws_vpc.devvpcname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devvpcname",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503561443062:vpc/vpc-0f23752c1e22cbccc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0fb5784a5d35c26d5",
            "default_route_table_id": "rtb-0b82771725c276e00",
            "default_security_group_id": "sg-0f1bfcef73c2e002b",
            "dhcp_options_id": "dopt-01d721a3fc4fb875e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f23752c1e22cbccc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b82771725c276e00",
            "owner_id": "503561443062",
            "tags": {
              "Description": "DEV env VPC for DEV resources",
              "Name": "dev-vpc",
              "Team": "DevOps"
            },
            "tags_all": {
              "Description": "DEV env VPC for DEV resources",
              "Name": "dev-vpc",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}